Fix overlap of header on the contents of a page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,10 @@
   --breakpoint-lg: 1000px;
 }
 
+:root {
+  --header-height: 90px;
+}
+
 *,
 ::before,
 ::after {
